--- a/AIGame_web/package.json
+++ b/AIGame_web/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.4.1",
+    "ai": "^4.3.16",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,6 +23,7 @@
     "i18next": "^24.2.0",
     "jotai": "^2.11.0",
     "mini-svg-data-uri": "^1.4.4",
+    "openai": "^5.3.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
