--- a/AIGame_web/package.json
+++ b/AIGame_web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.4.1",
