--- a/AIGame_web/package.json
+++ b/AIGame_web/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.15.0",
     "i18next": "^24.2.0",
     "jotai": "^2.11.0",
+    "lucide-react": "^0.517.0",
     "mini-svg-data-uri": "^1.4.4",
     "openai": "^5.3.0",
     "path": "^0.12.7",
