--- a/AIGame_web/package.json
+++ b/AIGame_web/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.4.1",
     "ai": "^4.3.16",
     "axios": "^1.7.9",
@@ -32,7 +33,8 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.3.0",
     "react-router-dom": "^7.1.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
